# git-details

./: README.md  TODO.md  git-details.cabal
app/: Main.hs
src/: Lib.hs  Scratch.hs
src/Data/: DepthElement.hs  Opaque.hs  Plugin.hs
src/Data/Attoparsec/Text/: Utils.hs
src/Data/Char/: Parse.hs
src/Data/Conduit/: Lens.hs  Maybe.hs  Utils.hs
src/Data/Conduit/Process/: Utils.hs
src/Data/Either/: Utils.hs
src/Data/Git/: Details.hs  DiffTree.hs
src/Data/Git/Details/: Parse.hs
src/Data/Git/DiffTree/: Parse.hs
src/Data/List/: Utils.hs
src/Data/Maybe/: Utils.hs
src/Data/Text/Builder/: Utils.hs
src/Data/Time/Clock/: Parse.hs
src/Data/Tree/: Parse.hs  Utils.hs
src/GHC/IO/Handle/: Utils.hs
src/Git/: Commit.hs  Details.hs  DiffTree.hs  TreeDiff.hs  Types.hs
src/Git/Commit/: Parse.hs
src/Git/Types/: Parse.hs
src/System/Process/: Utils.hs
