name:                git-details
version:             0.1.0.0
synopsis:            Get various statistics about a git repository
description:         Please see README.md
homepage:            https://github.com/githubuser/basic#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Klein
maintainer:          lambdamichael@gmail.com
copyright:           2016 Michael Klein
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Conduit.Process.Utils
                     , Data.Conduit.Utils
                     , Data.DepthElement
                     , Data.Git.Details
                     , Data.Git.Details.Parse
                     , Data.Git.DiffTree
                     , Data.Git.DiffTree.Parse
                     , Data.Opaque
                     , Data.Tree.Parse
                     , Data.Tree.Utils
                     , Git.Details
                     , Git.Types
                     , Git.Types.Parse
                     , System.Process.Utils
                     , Scratch
  ghc-options:         -Wall
  build-depends:       base       >= 4.7     && < 5
                     , bytestring >= 0.10.6.0
                     , conduit    >= 1.2.6.1
                     , conduit-combinators >= 1.0.0
                     , conduit-extra >= 1.1.12
                     , lens       >= 4.0
                     , text       >= 1.2.0.0
                     , attoparsec >= 0.10.0.0
                     , containers >= 0.5.0.0
                     , directory  >= 1.2.0.0
                     , temporary  >= 1.1.2
                     , time       >= 1.3
                     , mono-traversable >= 0.10.0
                     , stm        >= 2.4
                     , process    >= 1.2.0.0
                     , split      >= 0.1.1
                     , stm-chans  >= 3.0.0
                     , stm-conduit >= 2.7.0
                     , text-show  >= 0.5
                     , transformers >= 0.2.0.0
  default-language:    Haskell2010
  other-modules:       Data.Attoparsec.Text.Utils
                     , Data.Char.Parse
                     , Data.Conduit.Lens
                     , Data.Conduit.Maybe
                     , Data.List.Utils
                     , Data.Maybe.Utils
                     , Data.Text.Builder.Utils
                     , Data.Time.Clock.Parse

executable git-details
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , git-details
  default-language:    Haskell2010

test-suite basic-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , basic
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/basic
